# PrefCuratorSystem

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  persona_store.py  schemas.py  storage.py
backend/app/routes/: assets.py  candidates.py  compose.py  personas.py  tagging.py
backend/app/services/: gemini_image_client.py  image_gen_client.py  ip_composer_client.py  persona_summary_client.py  prompt_expander_client.py  vlm_tagger_client.py
backend/tests/: test_compose_smoke.py  test_vlm_parser.py
docs/: ASSET_MODEL.md  PLAN.md
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/AssetLibrary/: AssetLibrary.module.css  AssetLibrary.tsx
frontend/src/components/Canvas/: Canvas.module.css  Canvas.tsx
frontend/src/components/CanvasTagOverlay/: CanvasTagOverlay.module.css  CanvasTagOverlay.tsx
frontend/src/components/CuratorPanel/: CuratorPanel.module.css  CuratorPanel.tsx
frontend/src/components/FinalBadge/: FinalBadge.module.css  FinalBadge.tsx
frontend/src/components/FusionStackPreview/: FusionStackPreview.module.css  FusionStackPreview.tsx
frontend/src/components/InspirationGrid/: InspirationGrid.module.css  InspirationGrid.tsx
frontend/src/components/IntensityMixer/: IntensityMixer.module.css  IntensityMixer.tsx
frontend/src/components/LassoOverlay/: LassoOverlay.module.css  LassoOverlay.tsx  (+1 more)
frontend/src/lib/: api.ts  mockApi.ts
frontend/src/store/: useCurator.ts
(+16 files in other folders)
